# sm-pkg

./: .gitignore  .goreleaser.yaml  Cargo.toml  DEVEL.md  LICENSE.md  Makefile  README.md  build.rs  justfile  shell.nix
.github/workflows/: build.yml  codeql.yml  crates.yml  release.yml
schema/: package.json  plugin.json  sm-pkg.json
sm-pkg/: Cargo.toml
sm-pkg-bin/: Cargo.toml
sm-pkg-bin/src/: main.rs
sm-pkg/src/: config.rs  lib.rs  plugins.rs  project.rs  repo.rs  sdk.rs
sm-pkg/src/repo/: git.rs  local_path.rs  mod.rs  overlay.rs
sm-pkg/src/templates/: intbool.rs  mod.rs  yesnobool.rs
sm-pkg/templates/: start.sh.jinja2
sm-pkg/templates/addons/sourcemod/configs/: admin_groups.cfg.jinja2  admin_overrides.cfg.jinja2
sm-pkg/templates/tf/: start.sh.jinja2
src/: compiler.rs  fsutil.rs  lib.rs  plugins.rs  project.rs  repo.rs  sdk.rs  template.rs  templates.rs  tmpl.rs
src/sdk/: commands.rs  mod.rs
src/templates/: intbool.rs  mod.rs  onoffbool.rs
src/templates/tf/addons/sourcemod/configs/: admins_simple.ini.jinja2  databases.cfg.jinja2
src/templates/tf/cfg/sourcemod/: sourcemod.cfg.jinja2
templates/tf/addons/sourcemod/configs/: admins.cfg.jinja2  admins_simple.ini.jinja2  core.cfg.jinja2  databases.cfg.jinja2  maplists.cfg.jinja2
templates/tf/cfg/sourcemod/: sourcemod.cfg.jinja2
