[package]
name = "sm-pkg"
version = "0.1.0"
description = "A sourcemod package manager"
readme = "README.md"
license = "MIT"
edition = "2024"
authors = [
    "Leigh MacDonald <leigh.macdonald@gmail.com>"
]

[[bin]]
name = "sm-pkg"
path = "src/bin/main.rs"

[dependencies]
archive = "0.3.0"
askama ="0.15.1"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
flate2 = { version = "1.1.8", features = ["zlib-rs"] }
inquire = "0.9.2"
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
resolve-path = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
