[workspace]
members = ["sm-pkg", "sm-pkg-bin"]
resolver = "3"

[profile.dev]
opt-level = 1       # Low-level optimization for faster dev builds
debug = true        # Include debug symbols
overflow-checks = true

[profile.release]
opt-level = 3    # Maximum optimization for performance
debug = false    # Exclude debug symbols for smaller binary size
lto = true       # Link-Time Optimization for further size reduction
panic = "abort"  # Use `abort` to reduce binary size further
