[package]
name = "sm-pkg-bin"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[features]
default = []
repo = []


[dependencies]
clap = { version = "4.5.57", features = ["derive", "color", "env"] }
resolve-path = "0.1.0"
sm-pkg = { path = "../sm-pkg" }
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
clap_complete = "4.5.65"

[[bin]]
name = "sm-pkg"
path = "src/main.rs"
